# fsoft2026_1DB_1

./: main.cpp
Documentation/Iteration01/: Domain model.puml  temp1.puml
Project/: CMakeLists.txt  main.cpp
Project/Mock/: MockData.cpp  MockData.h
Project/classes/model/: App.cpp  Cinema.cpp  Seat.cpp  Ticket.cpp  User.cpp  administrator.cpp  movies.cpp  seat.cpp  user.cpp
Project/headers/controllers/: AuthController.h  Controller.h  MainController.h  ReservationController.h
Project/headers/dto/: MovieDTO.h  ReservationDTO.h  SeatDTO.h  SessionDTO.h  UserDTO.h
Project/headers/exceptions/: Exceptions.h
Project/headers/mapper/: MovieMapper.h  ReservationMapper.h  SeatMapper.h  SessionMapper.h  UserMapper.h
Project/headers/model/: App.h  Cinema.h  Exceptions.h  Movie.h  Payment.h  Reservation.h  Seat.h  Session.h  Ticket.h  User.h  UserContainer.h  administrator.h  customer.h  movies.h  seat.h  user.h
Project/headers/repository/: IMovieTicketRepository.h  MovieTicketRepositoryMemory.h
Project/headers/services/: AuthService.h  ReservationService.h
Project/headers/views/: AuthView.h  MainView.h  ReservationView.h  authView.h  mainView.h
Project/sources/controllers/: AuthController.cpp  MainController.cpp  ReservationController.cpp
Project/sources/mapper/: MovieMapper.cpp  ReservationMapper.cpp  SeatMapper.cpp  SessionMapper.cpp  UserMapper.cpp
Project/sources/model/: Cinema.cpp  Movie.cpp  Payment.cpp  Reservation.cpp  Seat.cpp  Session.cpp  Ticket.cpp  User.cpp  UserContainer.cpp
Project/sources/repository/: MovieTicketRepositoryMemory.cpp
Project/sources/services/: ReservationService.cpp
Project/sources/views/: AuthView.cpp  MainView.cpp  ReservationView.cpp  authViews.cpp
